--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <div class="list-item">
                     <div class="item-name">Test</div>
                     <div class="item-count">
-                        <button class="round-button substract">
+                        <button class="round-button substract" data-tooltip="test">
                             <i>-</i>
                         </button>
                         <span class="counter">1</span>
-                        <button class="round-button add">
+                        <button class="round-button add" data-tooltip="test2">
                             <i>+</i>
                         </button>
                     </div>
@@ -36,7 +36,10 @@
                 Left
             </div>
             <div class="summary-section">
-                
+                <span class="label">
+                    Test
+                    <span class="label-count">2</span>
+                </span>
             </div>
             <div class="summary-section summary-title">
                 Bought
@@ -45,6 +48,14 @@
                 
             </div>
         </div>
+    </div>
+
+    <div class="badge">
+        <h3 class="title">Buy List</h3>
+        <p class="created-by">
+            Created by: <br>
+            <span class="name">Danyil Karuna</span>
+        </p>
     </div>
 </body>
 </html>
